deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
     matchLabels:
       app: goserver
  replicas: 10
  template:
    metadata: 
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: "rodrigokleint2/hello-go:v3"
