pod.yaml
apiVersion: v1 
kind: Pod
metadata:
  name: "goserver"
  labels:
    name: "goserver"
spec:
  containers:
  - name: goserver
    image: "rodrigokleint2/hello-go:v3"
