deployment_echo1.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service-echo1
spec:
  selector:
    app: goserver-echo1
  #type: ClusterIP #LoadBalancer   
  ports:
  - name: goserver-service-echo1
    port: 80
    targetPort : 8000
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver-echo1
  labels:
    app: goserver-echo1
spec:
  selector:
     matchLabels:
       app: goserver-echo1
  replicas: 2
  template:
    metadata: 
      labels:
        app: "goserver-echo1"
    spec:
      containers:
        - name: goserver-echo1
          image: "rodrigokleint2/hello-go:echo1"
