service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: ClusterIP #LoadBalancer   
  ports:
  - name: goserver-service
    port: 80
    targetPort : 8000
    protocol: TCP
