ingress-subdominio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subdominio
spec:
  rules:
  - host: www.rodrigoklein.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: goserver-service
            port: 
              number: 80
